# obsidian_agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: project-overview.md
docs/superpowers/plans/: 2026-05-26-obsidian-agent.md
docs/superpowers/specs/: 2026-05-26-obsidian-agent-design.md
src/obsidian_agent/: cli.py  config.py
src/obsidian_agent/providers/: base.py  deepseek_llm.py  fake.py  openai_compatible_embedding.py  openai_embedding.py
src/obsidian_agent/retrieval/: qa.py  retriever.py
src/obsidian_agent/storage/: memory_store.py  sqlite_store.py  vector_store.py
src/obsidian_agent/suggestions/: reporter.py  rules.py
src/obsidian_agent/vault/: chunker.py  models.py  parser.py  scanner.py
tests/: test_ask_cli.py  test_chunker.py  test_cli.py  test_config.py  test_e2e_cli.py  test_memory_cli.py  test_memory_store.py  test_package.py  test_parser.py  test_retrieval_with_fake_provider.py  test_scan_cli.py  test_scanner.py  test_sqlite_store.py  test_suggestions.py
tests/fixtures/vault_basic/: Project.md
tests/fixtures/vault_basic/Inbox/: Loose.md
