[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obsidian-agent"
version = "0.1.0"
description = "Read-only CLI agent for Obsidian knowledge bases"
requires-python = ">=3.11"
dependencies = [
  "chromadb>=0.5.0",
  "openai>=1.0.0",
  "pydantic>=2.0.0",
  "pyyaml>=6.0.0",
  "rich>=13.0.0",
  "tomli-w>=1.0.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
obsidian-agent = "obsidian_agent.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
